@@ -59,13 +59,13 @@
 		&nbsp;&nbsp;&nbsp;double click: same of F5<br> 
 <br> 
 		<b>author:</b><br> 
-		&nbsp;&nbsp;&nbsp;Armando Basile (<a href="mailto:hmandevteam@gmail.com">hmandevteam@gmail.com</a>)<br> 
+		&nbsp;&nbsp;&nbsp;Armando Basile (hmandevteam@gmail.com)<br> 
 <br> 
 		<b>website:</b><br> 
-		&nbsp;&nbsp;&nbsp;<a href="http://comex-project.googlecode.com">comex-project.googlecode.com</a><br> 
+		&nbsp;&nbsp;&nbsp;http://comex-project.googlecode.com<br> 
 <br> 
 		<b>issue tracker:</b><br> 
-		&nbsp;&nbsp;&nbsp;<a href="http://code.google.com/p/comex-project/issues/list">code.google.com/p/comex-project/issues/list</a><br> 
+		&nbsp;&nbsp;&nbsp;http://code.google.com/p/comex-project/issues/list<br> 
 		]]></infodesc>
 		
 		<thanksdesc><![CDATA[Si ringraziano gli sviluppatori, tester, traduttori, web designer e 
