@@ -60,13 +60,13 @@
 		&nbsp;&nbsp;&nbsp;doppio click: stessa cosa di F5<br> 
 <br> 
 		<b>autore:</b><br> 
-		&nbsp;&nbsp;&nbsp;Armando Basile (<a href="mailto:hmandevteam@gmail.com">hmandevteam@gmail.com</a>)<br> 
+		&nbsp;&nbsp;&nbsp;Armando Basile (hmandevteam@gmail.com)<br> 
 <br> 		
 		<b>sito web:</b><br> 
-		&nbsp;&nbsp;&nbsp;<a href="http://comex-project.googlecode.com">comex-project.googlecode.com</a><br> 
+		&nbsp;&nbsp;&nbsp;http://comex-project.googlecode.com<br> 
 <br> 
 		<b>segnalazioni:</b><br> 
-		&nbsp;&nbsp;&nbsp;<a href="http://code.google.com/p/comex-project/issues/list">code.google.com/p/comex-project/issues/list</a><br> 
+		&nbsp;&nbsp;&nbsp;http://code.google.com/p/comex-project/issues/list<br> 
 		]]></infodesc>
 		
 		<thanksdesc><![CDATA[Si ringraziano gli sviluppatori, tester, traduttori, web designer e 
